--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,12 +13,14 @@ services:
 
   phoenix:
     build: ./phoenix-api
-    volumes:
-    - ./phoenix-api:/app
     environment:
       MIX_ENV: dev
       DATABASE_URL: ecto://postgres:postgres@db/phoenix_app
-      SECRET_KEY_BASE: changemechangemechangemechangeme
+      SECRET_KEY_BASE: IUfUsBuw3aFs%hj56j&^kjsAA32
+      MALE_NAMES_URL: "https://api.dane.gov.pl/media/resources/20250124/8_-_Wykaz_imion_m%C4%99skich_os%C3%B3b_%C5%BCyj%C4%85cych_wg_pola_imi%C4%99_pierwsze_wyst%C4%99puj%C4%85cych_w_rejestrze_PESEL_bez_zgon%C3%B3w.csv"
+      MALE_SURNAMES_URL: "https://api.dane.gov.pl/media/resources/20250123/nazwiska_m%C4%99skie-osoby_%C5%BCyj%C4%85ce.csv"
+      FEMALE_NAMES_URL: "https://api.dane.gov.pl/media/resources/20250124/8_-_Wykaz_imion_%C5%BCe%C5%84skich__os%C3%B3b_%C5%BCyj%C4%85cych_wg_pola_imi%C4%99_pierwsze_wyst%C4%99puj%C4%85cych_w_rejestrze_PESEL_bez_zgon%C3%B3w.csv"
+      FEMALE_SURNAMES_URL: "https://api.dane.gov.pl/media/resources/20250123/nazwiska_%C5%BCe%C5%84skie-osoby_%C5%BCyj%C4%85ce_efby1gw.csv"
     depends_on:
       - db
     ports:
