--- a/symfony-app/config/routes.yaml
+++ b/symfony-app/config/routes.yaml
@@ -1,5 +1,5 @@
 controllers:
     resource:
-        path: ../src/Controller/
-        namespace: App\Controller
+        path: ../src/UserInterface/Web/
+        namespace: App\UserInterface\Web
     type: attribute
