phoenix symfony - import secured

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       MIX_ENV: dev
       DATABASE_URL: ecto://postgres:postgres@db/phoenix_app
       SECRET_KEY_BASE: IUfUsBuw3aFs%hj56j&^kjsAA32
+      IMPORT_API_TOKEN: ${IMPORT_API_TOKEN}
       MALE_NAMES_URL: "https://api.dane.gov.pl/media/resources/20250124/8_-_Wykaz_imion_m%C4%99skich_os%C3%B3b_%C5%BCyj%C4%85cych_wg_pola_imi%C4%99_pierwsze_wyst%C4%99puj%C4%85cych_w_rejestrze_PESEL_bez_zgon%C3%B3w.csv"
       MALE_SURNAMES_URL: "https://api.dane.gov.pl/media/resources/20250123/nazwiska_m%C4%99skie-osoby_%C5%BCyj%C4%85ce.csv"
       FEMALE_NAMES_URL: "https://api.dane.gov.pl/media/resources/20250124/8_-_Wykaz_imion_%C5%BCe%C5%84skich__os%C3%B3b_%C5%BCyj%C4%85cych_wg_pola_imi%C4%99_pierwsze_wyst%C4%99puj%C4%85cych_w_rejestrze_PESEL_bez_zgon%C3%B3w.csv"
@@ -33,6 +34,7 @@ services:
     environment:
       APP_ENV: dev
       API_BASE_URL: http://phoenix:4000
+      IMPORT_API_TOKEN: ${IMPORT_API_TOKEN}
     depends_on:
       - phoenix
     ports:
